added atomic transaction proof for postgres
