# docs/swagger.json
@@ -153,6 +153,43 @@
                 }
             }
         },
+        "/api/users/atomic": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Creates two users atomically",
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Atomic transaction proof",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
         "/api/users/email/{email}": {
             "get": {
                 "security": [
@@ -453,7 +490,7 @@
         "responses.Creation": {
             "type": "object",
             "properties": {
-                "insertedId": {
+                "inserted_id": {
                     "type": "string"
                 }
             }
@@ -478,7 +515,7 @@
                         "type": "integer"
                     }
                 },
-                "createdAt": {
+                "created_at": {
                     "type": "string"
                 },
                 "email": {
@@ -493,7 +530,7 @@
                 "surnames": {
                     "type": "string"
                 },
-                "updatedAt": {
+                "updated_at": {
                     "type": "string"
                 }
             }
